<resources>
    <string name="app_name">Dziennik Treningowy</string>
    <string name="home_page">STRONA GŁÓWNA</string>
    <string name="workout_plans">PLANY TRENINGOWE</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="program_header">TWOJE PLANY TRENINGOWE</string>
    <string name="program_add_butto">DODAJ PLAN</string>
    <string name="program_item_hint">Nazwa planu treningowego</string>
    <string name="btnAddRoutine">Dodaj rutyne</string>
    <string name="menu_edit_option">Edytuj</string>
    <string name="miDeleteOption">Usuń</string>
    <string name="fbtn_add_routine_to_plan">Add routine to plan</string>
    <string name="etAddRoutineName">Nazwa rutyny treningowej</string>
    <string name="day_spinner_content_desc">Dni tygodnia</string>
    <string name="cnt_desc_fabAddExercisesToRoutine">Add exercise list to routine</string>
    <string name="etReps">1</string>
    <string name="etWeight">40</string>
    <string name="etRest">120</string>
    <string name="drawer_menu_home_title">Strona główna</string>
    <string name="drawer_menu_program_title">Plany Treningowe</string>
    <string name="navbar_menu_icon">navbar_menu_icon</string>
    <string name="navigation_example">Navigation example</string>
    <string name="tv_rest_fragment_workout">Czas odpoczynku:</string>
    <string name="seconds_fragment_workout">s</string>
    <string name="series_fragment_workout">Seria:</string>
    <string name="exercise_name_fragment_workout">Nazwa ćwiczenia</string>
    <string name="reps_fragment_workout">Powtórzenia:</string>
    <string name="weight_fragment_workout">Obciążenie [kg]:</string>
    <string name="fabNext_desc">Go to next exercise in routine</string>
    <string name="tilPlanNameHint">Nazwa planu</string>
    <string name="til_goal_hint">Cel treningowy</string>
    <string name="active_plan">Aktywny</string>
    <string name="btn_save_plan">Zapisz</string>
    <string name="fabPlusSeries_contDesc">Dodaj serie</string>
    <string name="fabMinusSeries_contDesc">Zmniejsz serie</string>
    <string name="btn_cancel">Anuluj</string>
    <string name="btn_add_text">Dodaj</string>
    <string name="tv_reps">Powtórzenia</string>
    <string name="tv_weight">Obciążenie</string>
    <string name="tv_restTime">Odpoczynek</string>
    <string name="tv_seriescounter_dialog">Serie</string>
    <string name="tv_series_counter_value">1</string>
    <string name="ex_name_dialog_exercise">Nazwa ćwiczenia</string>
    <string name="fabEditSeries_contDesc">Edit Series</string>
    <string name="hint_tilWeightDialogAddExercise">Obciążenie</string>
    <string name="hint_tilRepsDialogAddExercise">Powtórzenia</string>
    <string name="hint_tilRestTimeDialogAddExercise">Odpoczynek</string>
    <string name="fab_pause_contDesc">Przerwij trening</string>
    <string name="edit_message">EDYTUJ</string>
    <string-array name="day_shortcuts_array">
        <item>Pn</item>
        <item>Wt</item>
        <item>Sr</item>
        <item>Cz</item>
        <item>Pt</item>
        <item>S</item>
        <item>N</item>
    </string-array>
    <string-array name="day_spinner_array">
        <item>Poniedziałek</item>
        <item>Wtorek</item>
        <item>Sroda</item>
        <item>Czwartek</item>
        <item>Piątek</item>
        <item>Sobota</item>
        <item>Niedziela</item>
    </string-array>
</resources>