<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mainFragmentBackground"
    tools:context=".ui.views.fragments.FragmentWorkout">

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_rest_fragment_workout"
            android:textColor="@color/mainFragmentColor"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tvRestTimeFragmentWorkout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_marginStart="3dp"
            android:textColor="#F8B364" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/seconds_fragment_workout"
            android:textColor="@color/mainFragmentColor"
            android:textSize="16sp" />


    </LinearLayout>


    <ImageView
        android:id="@+id/imgExerciseFragmentWorkout"
        android:layout_width="0dp"
        android:layout_height="250dp"
        android:layout_marginTop="12dp"
        android:src="@drawable/exercise_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3" />

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgExerciseFragmentWorkout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="5dp"
            android:gravity="center"
            android:text="@string/series_fragment_workout"
            android:textColor="@color/mainFragmentColor"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tvSeriesCountFragmentWorkout"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:layout_marginStart="3dp"
            android:layout_marginEnd="3dp"
            android:gravity="center"
            android:text="1/5"
            android:textAlignment="center"
            android:textColor="#F9F871"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tvExerciseNameFragmentWorkout"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="3dp"
            android:layout_marginEnd="6dp"
            android:layout_weight="1"
            android:fontFamily="sans-serif-medium"
            android:gravity="center"
            android:letterSpacing="0.05"
            android:text="@string/exercise_name_fragment_workout"
            android:textColor="@color/mainFragmentColor"
            android:textSize="16sp"
            android:textStyle="bold" />


    </LinearLayout>


    <TextView
        android:id="@+id/textView"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/reps_fragment_workout"
        android:textColor="@color/mainFragmentColor"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout4" />


    <TextView
        android:id="@+id/textView3"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:gravity="center"
        android:text="@string/weight_fragment_workout"
        android:textColor="@color/mainFragmentColor"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnNextFragmentWorkout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:src="@drawable/icon_next"
        app:tint="@color/white"
        app:maxImageSize="33dp"
        app:backgroundTint="#174FDF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.862"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.933"
        android:contentDescription="@string/fabNext_desc"
        android:focusable="true" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilRepsFragmentWorkout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:hint="Powtórzenia"
        android:textColorHint="#D5D2D2"
        app:counterEnabled="true"
        app:counterMaxLength="6"
        app:errorEnabled="true"
        app:errorIconDrawable="@drawable/icon_error"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout4">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etRepsFragmentWorkout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:digits="123456789"
            android:inputType="number"
            android:maxLength="6"
            android:textColor="@color/colorPrimary" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilWeightFragmentWorkout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_marginTop="32dp"
        android:hint="Obciążenie"
        android:textColorHint="#D5D2D2"
        app:errorEnabled="true"
        app:errorIconDrawable="@drawable/icon_error"
        app:counterEnabled="true"
        app:counterMaxLength="6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/tilRepsFragmentWorkout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etWeightFragmentWorkout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:maxLength="6"
            android:textColor="@color/colorPrimary" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabPauseWorkout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        app:tint="@color/white"
        app:maxImageSize="30dp"
        android:contentDescription="@string/fab_pause_contDesc"
        android:src="@drawable/icon_pause"
        app:backgroundTint="#F64040"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.126"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.933"
        android:focusable="true" />


</androidx.constraintlayout.widget.ConstraintLayout>