<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="330dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_gravity="center"
    android:layout_height="wrap_content">
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardCornerRadius="20dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="320dp"
            android:background="#E6E5E5">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilRepsParamsDialog"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="4dp"
                android:hint="@string/tv_reps"
                app:counterEnabled="true"
                app:counterMaxLength="6"
                app:errorEnabled="true"
                app:errorIconDrawable="@drawable/icon_error"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etRepsParamDialog"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:maxLength="6" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilWeightParamsDialog"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="4dp"
                android:hint="@string/tv_weight"
                app:counterEnabled="true"
                app:counterMaxLength="6"
                app:errorEnabled="true"
                app:errorIconDrawable="@drawable/icon_error"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tilRepsParamsDialog">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etWeightParamsDialog"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:maxLength="6" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilRestParamsDialog"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="4dp"

                android:hint="@string/tv_restTime"
                app:counterEnabled="true"
                app:counterMaxLength="6"
                app:errorEnabled="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tilWeightParamsDialog">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etRestParamsDialog"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:maxLength="6" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btnOkParamsDialog"
                style="@style/Widget.Material3.Button.Icon"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:backgroundTint="#079826"
                android:text="@string/btn_save_plan"
                android:textSize="16sp"
                app:icon="@drawable/ic_confirm"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tilRestParamsDialog" />

            <Button
                android:id="@+id/btnCancelParamsDialog"
                style="@style/Widget.Material3.Button.OutlinedButton"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="@string/btn_cancel"
                android:textColor="#C60707"
                android:textSize="16sp"
                app:icon="@drawable/ic_baseline_cancel_24"
                app:iconTint="#C60707"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/btnOkParamsDialog"
                app:layout_constraintTop_toBottomOf="@+id/tilRestParamsDialog"
                app:strokeColor="#C60707" />



        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>